# cyipopt

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  MANIFEST.in  Makefile  README  README.rst  appveyor.yml  build_many_linux_wheels.sh  build_manylinux_wheels.sh  ipopt.pc  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build.yml  build_wheels.yml  ci.yml  docs.yml  run-tests.yml  test.yml  tests.yml  windows.yml
conda/: cyipopt-dev.yml
cyipopt/: __init__.py  deprecated.py  depricated.py  exceptions.py  ipopt_wrapper.py  scipy_interface.py  utils.py  version.py
cyipopt/cython/: ipopt.pxd  ipopt_wrapper.c  ipopt_wrapper.pyx
cyipopt/src/: cyipopt.c  cyipopt.pyx
cyipopt/tests/: conftest.py  requirements.txt
cyipopt/tests/integration/: test_args_kwargs.py  test_hs071.py
cyipopt/tests/unit/: test_deprecations.py  test_deriv_errors.py  test_dual_warm_start.py  test_exceptions.py  test_ipopt_funcs.py  test_options.py  test_scipy_ipopt_from_scipy.py  test_scipy_ipopt_trust_constr.py  test_scipy_optional.py
doc/: Makefile
doc/source/: conf.py  index.rst  install.rst  reference.rst  tutorial.rst
docker/: Dockerfile  Makefile  get_cyipopt.sh  get_ipopt.sh
docs/: make.bat  requirements.txt  rtd-env.yml
docs/source/: conf.py  development.rst  index.rst  install.rst  reference.rst  tutorial.rst
examples/: build_wheels.yml  constraints.py  exception_handling.py  hs071.py  hs071_scipy_jax.py  hs071_scipy_jax_sparse.py  lasso.py  rosen.py
ipopt/: __init__.py  ipopt_wrapper.py  version.py
licenses_manylinux_bundled_libraries/: README.md  gfortran.txt  ipopt.txt  libquadmath.txt  mumps.txt  openblas.txt
src/: cyipopt.c  cyipopt.pyx  ipopt.pxd
test/: example.py  examplehs071.py  exception_handling.py  lasso.py  rosen.py
tests/: conftest.py
tests/integration/: test_hs071.py
tests/unit/: test_deprecations.py  test_deprications.py
vagrant/: Vagrantfile
